--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="top-carousel">
-        <img src="/img/20.png">
+        <img src="/img/1.png">
         <img src="img/116.png">
         <img src="img/120.png">
         <img src="img/144.png">
@@ -22,6 +22,7 @@
             <img src="/img/36.png">
         </div>
         <div class="center">
+            <img src="img/Better News Bears (13).png">
 
         </div>
         <div class="right-carousel">
@@ -31,11 +32,11 @@
         </div>
     </div>
     <div class="bottom-carousel">
-        <img src="image1">
-        <img src="image1">
-        <img src="image1">
-        <img src="image1">
-        <img src="image1">
+        <img src="/img/6.png">
+        <img src="/img/20.png">
+        <img src="/img/61.png">
+        <img src="/img/82.png">
+        <img src="/img/84.png">
     </div>
     
 </body>
