Fix broken links on carousels

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="top-carousel">
-        <img src="/img/1.png">
+        <img src="img/1.png">
         <img src="img/116.png">
         <img src="img/120.png">
         <img src="img/144.png">
@@ -17,26 +17,26 @@
     </div>
     <div class="main-body">
         <div class="left-carousel">
-            <img src="/img/23.png">
-            <img src="/img/3.png">
-            <img src="/img/36.png">
+            <img src="img/23.png">
+            <img src="img/3.png">
+            <img src="img/36.png">
         </div>
         <div class="center">
             <img src="img/Better News Bears (13).png">
 
         </div>
         <div class="right-carousel">
-            <img src="/img/48.png">
-            <img src="/img/52.png">
-            <img src="/img/53.png">
+            <img src="img/48.png">
+            <img src="img/52.png">
+            <img src="img/53.png">
         </div>
     </div>
     <div class="bottom-carousel">
-        <img src="/img/6.png">
-        <img src="/img/20.png">
-        <img src="/img/61.png">
-        <img src="/img/82.png">
-        <img src="/img/84.png">
+        <img src="img/6.png">
+        <img src="img/20.png">
+        <img src="img/61.png">
+        <img src="img/82.png">
+        <img src="img/84.png">
     </div>
     
 </body>
